--- a/src/javaScript/fgcRelate/FGC_JS.html
+++ b/src/javaScript/fgcRelate/FGC_JS.html
@@ -10,41 +10,40 @@
 
 <script>
     //get FGC selected table
-    var fileList=Forguncy.Page.getListView('表格1').getSelectedRowsData();
-    list =new Array();
+    var fileList = Forguncy.Page.getListView('表格1').getSelectedRowsData();
+    list = new Array();
     for (let i = 0; i < fileList.size; i++) {
         list.add(fileList[0])
     }
     console.log(list)
 
 
-
-
     //给活字格表格加对象字段
     var len = Forguncy.Page.getListView(tableName).getRowCount();
     for (i = 0; i < len; i++) {
         //返回值
-        var res=[];
-        for(j=0;j<rowNames.length;j++){
+        var res = [];
+        for (j = 0; j < rowNames.length; j++) {
             //''+将data转换成字符串，解决值为单时，split方法找不到
-            data = ''+Forguncy.Page.getListView(tableName).getValue(i,rowNames[j]);
+            data = '' + Forguncy.Page.getListView(tableName).getValue(i, rowNames[j]);
             //获取列名对应的值
-            typecode=getType(rowNames[j]);
+            typecode = getType(rowNames[j]);
             arr = data.split(',');
-            for(k=0;k<arr.length;k++){
-                if(arr[k]!=""){
-                    fitrange={
-                        type:typecode,
-                        code:'-1',
-                        name:arr[k],
+            for (k = 0; k < arr.length; k++) {
+                if (arr[k] != "") {
+                    fitrange = {
+                        type: typecode,
+                        code: '-1',
+                        name: arr[k],
                     }
                     res.push(fitrange);
                 }
             }
         }
-        Forguncy.Page.getListView(tableName).setValue(i, '值',res);
+        Forguncy.Page.getListView(tableName).setValue(i, '值', res);
         console.log(res);
     }
+
 
     function getType(name) {
         switch (name) {
@@ -67,10 +66,16 @@ case '适用商品分类':
                 code = 5;
                 break;
             default:
-                code=-1;
+                code = -1;
         }
         return code;
     }
+
+
+</script>
+<script>
+
+    window.open(servicePort + '/onlinePreview?url = '+encodeURIComponent(Base64.encode(path)));
 
 
 </script>
