finish lcoffer40 daily

--- a/javaScript/common/httpTest.html
+++ b/javaScript/common/httpTest.html
@@ -31,6 +31,15 @@ style="display: none "
 
 
 
+    $(".picturePoint").before(" <input id=\"imgUpload\" name=\"myFiles\" type=\"file\" accept=\".jpg, .jpeg, .png, .gif\" multiple\n" +
+        "           onChange=\"uploadImg(event)\"/>\n" +
+        "    <div className=\"img-box\"></div>");
+
+
+
+
+
+
 
 
     // var fileUrl=document.getElementById("path");
